# MySQLDeveloper

./: CMakeLists.txt  connectiondialog.cpp  connectiondialog.h  main.cpp  mainwindow.cpp  mainwindow.h  sqlscriptrunner.cpp  sqlscriptrunner.h
exe/: local_db.sqlite  script_for_mydev.sql
